# ip-fetch

./: Cargo.toml
docs/: README.md
snap/: snapcraft.yaml
src/: ip_fetcher.rs  main.rs
